@@ -1,12 +1,17 @@
 package com.hbmspace.dim;
 
 import com.hbm.config.GeneralConfig;
+import com.hbm.handler.ImpactWorldHandler;
 import com.hbm.inventory.fluid.FluidStack;
+import com.hbm.saveddata.satellites.Satellite;
+import com.hbm.saveddata.satellites.SatelliteSavedData;
 import com.hbmspace.dim.trait.CBT_Atmosphere;
 import com.hbmspace.dim.trait.CBT_Atmosphere.FluidEntry;
 import com.hbmspace.dim.trait.CBT_Destroyed;
+import com.hbmspace.dim.trait.CBT_War;
 import com.hbmspace.handler.atmosphere.ChunkAtmosphereManager;
 import com.hbm.inventory.fluid.Fluids;
+import com.hbmspace.saveddata.satellites.SatelliteWar;
 import io.netty.buffer.ByteBuf;
 import net.minecraft.block.Block;
 import net.minecraft.client.Minecraft;
@@ -24,9 +29,15 @@ import net.minecraft.world.chunk.Chunk;
 import net.minecraftforge.client.IRenderHandler;
 import net.minecraftforge.fml.relauncher.Side;
 import net.minecraftforge.fml.relauncher.SideOnly;
+import org.jetbrains.annotations.NotNull;
+
+import java.util.List;
+import java.util.Map;
 
 public abstract class WorldProviderCelestial extends WorldProvider {
+	public List<SolarSystem.AstroMetric> metrics;
 
+	private double eclipseAmount;
 	private long localTime = -1;
 	
 	@Override
@@ -42,7 +53,7 @@ public abstract class WorldProviderCelestial extends WorldProvider {
 	}
 	// Should we generate bedrock ice
 	public boolean hasIce() {
-		return false;
+		return CelestialBody.getBody(world).hasIce;
 	}
 
 	public boolean hasLife() {
@@ -141,10 +152,54 @@ public abstract class WorldProviderCelestial extends WorldProvider {
 		colors[2] = color & 255;
 		return colors;
 	}
+
+	// This is called once, at the beginning of every frame
+	// so we use this to memoise expensive calcs
+	@SideOnly(Side.CLIENT)
+	protected void updateSky(float partialTicks) {
+		CelestialBody body = CelestialBody.getBody(world);
+
+		// First fetch the suns true size
+		double sunSize = SolarSystem.calculateSunSize(body);
+		float solarAngle = world.getCelestialAngle(partialTicks);
+
+		// Get our orrery of bodies, this is cached for reuse in sky rendering
+		metrics = SolarSystem.calculateMetricsFromBody(world, partialTicks, body, solarAngle);
+
+		// Get our eclipse amount
+		eclipseAmount = getEclipseFactor(metrics, sunSize, SolarSystem.MAX_APPARENT_SIZE_SURFACE);
+	}
+
+	public static double getEclipseFactor(List<SolarSystem.AstroMetric> metrics, double sunSize, double maxSize) {
+		double factor = 0;
+		double sunArc = getArc(sunSize);
+
+		// Calculate eclipse
+		for(SolarSystem.AstroMetric metric : metrics) {
+			if(metric.apparentSize < 1) continue;
+
+			double planetArc = getArc(MathHelper.clamp(metric.apparentSize, 0, maxSize));
+			double minPhase = 1 - (planetArc + sunArc);
+			double maxPhase = 1 - (planetArc - sunArc);
+			if(metric.phaseObscure < minPhase) continue;
+
+			double thisFactor = 1 - (metric.phaseObscure - maxPhase) / (minPhase - maxPhase);
+
+			factor = Math.min(Math.max(factor, thisFactor), 1.0);
+		}
+
+		return factor;
+	}
+
+	// due to rendering, the arc is not exactly 1deg = 1deg, this converts from apparentSize to 0-1
+	// note that we are rendering flat quads, so the arc size is warped more the larger you get!
+	private static double getArc(double apparentSize) {
+		return apparentSize * 0.0017D + Math.sqrt(apparentSize * 0.00003D);
+	}
 	
 	@Override
 	@SideOnly(Side.CLIENT)
-	public Vec3d getFogColor(float celestialAngle, float y) {
+	public @NotNull Vec3d getFogColor(float celestialAngle, float y) {
 		CBT_Atmosphere atmosphere = CelestialBody.getTrait(world, CBT_Atmosphere.class);
 
 		// The cold hard vacuum of space
@@ -173,9 +228,9 @@ public abstract class WorldProviderCelestial extends WorldProvider {
 				fluidColor = new Vec3d(53F / 255F * sunR, 32F / 255F * sunG, 74F / 255F * sunB);
 			} else if(entry.fluid == Fluids.DUNAAIR || entry.fluid == Fluids.CARBONDIOXIDE) {
 				fluidColor = new Vec3d(212F / 255F * sunR, 112F / 255F * sunG, 78F / 255F * sunB);
-			} else if(entry.fluid == Fluids.AIR || entry.fluid == Fluids.OXYGEN || entry.fluid == Fluids.NITROGEN) {
+			} else if(entry.fluid == com.hbmspace.inventory.fluid.Fluids.EARTHAIR || entry.fluid == Fluids.OXYGEN || entry.fluid == Fluids.NITROGEN) {
 				// Default to regular ol' overworld
-				fluidColor = new Vec3d(0.7529412F * sunR, 0.84705883F * sunG, 1.0F * sunB);
+				fluidColor = new Vec3d(0.7529412F * sunR, 0.84705883F * sunG, sunB);
 			} else {
 				fluidColor = getColorFromHex(entry.fluid.getColor());
 				fluidColor = new Vec3d(fluidColor.x * sunR * 1.4F, fluidColor.y * sunG * 1.4F, fluidColor.z * sunB * 1.4F);
@@ -205,51 +260,156 @@ public abstract class WorldProviderCelestial extends WorldProvider {
 			}
 		}
 
+		if (eclipseAmount > 0) {
+			color = color.scale(1 - eclipseAmount * 0.3);
+
+			float[] sunsetFog = calcSunriseSunsetColors(0.25F, 0);
+			if (sunsetFog != null) {
+				double sunsetAmount = MathHelper.clamp(eclipseAmount * 0.5 - (1 - sun), 0.0, 1.0);
+				color = new Vec3d(
+						color.x * (1.0F - sunsetAmount) + sunsetFog[0] * sunsetAmount,
+						color.y * (1.0F - sunsetAmount) + sunsetFog[1] * sunsetAmount,
+						color.z * (1.0F - sunsetAmount) + sunsetFog[2] * sunsetAmount
+				);
+			}
+		}
+
+		float dust = ImpactWorldHandler.getDustForClient(world);
+		float fire = ImpactWorldHandler.getFireForClient(world);
+
+		double cX = color.x;
+		double cY = color.y * (1 - (dust * 0.5F));
+		double cZ = color.z * (1 - dust);
+
+		if (fire > 0) {
+			double fireFactor = Math.max((1 - (dust * 2)), 0);
+			cX *= fireFactor;
+			cY *= fireFactor;
+			cZ *= fireFactor;
+		} else {
+			double dustFactor = 1 - dust;
+			cX *= dustFactor;
+			cY *= dustFactor;
+			cZ *= dustFactor;
+		}
+
+		color = new Vec3d(cX, cY, cZ);
+
 		
 		return color;
 	}
 
 	@Override
 	@SideOnly(Side.CLIENT)
-	public Vec3d getSkyColor(Entity camera, float partialTicks) {
+	public @NotNull Vec3d getSkyColor(@NotNull Entity camera, float partialTicks) {
+		// getSkyColor is called first on every frame, so if you want to memoise anything, do it here
+		updateSky(partialTicks);
+
 		CBT_Atmosphere atmosphere = CelestialBody.getTrait(world, CBT_Atmosphere.class);
-		
+
+		double cX = 0;
+		double cY = 0;
+		double cZ = 0;
+
+		for (Map.Entry<Integer, Satellite> entry : SatelliteSavedData.getClientSats().entrySet()) {
+			if (entry.getValue() instanceof SatelliteWar war) {
+				float flame = war.getInterp();
+				float alpd = 1.0F - Math.min(1.0F, flame / 100);
+
+				cX += alpd * 1.5;
+				cY += alpd * 1.5;
+				cZ += alpd * 1.5;
+			}
+		}
+
 		// The cold hard vacuum of space
-		if(atmosphere == null) return new Vec3d(0, 0, 0);
+		if (atmosphere == null) {
+			return new Vec3d(cX, cY, cZ);
+		}
 
-		float sun = this.getSunBrightnessFactor(1.0F);
-		float totalPressure = (float)atmosphere.getPressure();
-		Vec3d color = new Vec3d(0, 0, 0);
+		float sun = world.getSunBrightnessFactor(1.0F);
+		float totalPressure = (float) atmosphere.getPressure();
 
-		for(int i = 0; i < atmosphere.fluids.size(); i++) {
+		for (int i = 0; i < atmosphere.fluids.size(); i++) {
 			FluidEntry entry = atmosphere.fluids.get(i);
 			Vec3d fluidColor;
 
-			if(entry.fluid == Fluids.EVEAIR) {
+			if (entry.fluid == Fluids.EVEAIR) {
 				fluidColor = new Vec3d(53F / 255F * sun, 32F / 255F * sun, 74F / 255F * sun);
-			} else if(entry.fluid == Fluids.DUNAAIR || entry.fluid == Fluids.CARBONDIOXIDE) {
+			} else if (entry.fluid == Fluids.DUNAAIR || entry.fluid == Fluids.CARBONDIOXIDE) {
 				fluidColor = new Vec3d(212F / 255F * sun, 112F / 255F * sun, 78F / 255F * sun);
-			} else if(entry.fluid == Fluids.AIR || entry.fluid == Fluids.OXYGEN || entry.fluid == Fluids.NITROGEN) {
+			} else if (entry.fluid == com.hbmspace.inventory.fluid.Fluids.EARTHAIR || entry.fluid == Fluids.OXYGEN || entry.fluid == Fluids.NITROGEN) {
 				// Default to regular ol' overworld
 				fluidColor = super.getSkyColor(camera, partialTicks);
 			} else {
 				fluidColor = getColorFromHex(entry.fluid.getColor());
-				fluidColor.scale(sun);
+				fluidColor = new Vec3d(fluidColor.x * sun, fluidColor.y * sun, fluidColor.z * sun);
 			}
 
-			float percentage = (float)entry.pressure / totalPressure;
-			color = new Vec3d(
-				color.x + fluidColor.x * percentage,
-				color.y + fluidColor.y * percentage,
-				color.z + fluidColor.z * percentage
-			);
+			float percentage = (float) entry.pressure / totalPressure;
+
+			cX += fluidColor.x * percentage;
+			cY += fluidColor.y * percentage;
+			cZ += fluidColor.z * percentage;
+		}
+
+		if (CelestialBody.getBody(world).hasTrait(CBT_War.class)) {
+			CBT_War wardat = CelestialBody.getTrait(world, CBT_War.class);
+			for (int i = 0; i < wardat.getProjectiles().size(); i++) {
+				CBT_War.Projectile projectile = wardat.getProjectiles().get(i);
+				float flash = projectile.getFlashtime();
+				if (projectile.getAnimtime() > 0) {
+					float invertedFlash = 100 - flash;
+
+					cX += invertedFlash * 0.5;
+					cY += invertedFlash * 0.5;
+					cZ += invertedFlash * 0.5;
+				}
+			}
+		}
+
+		for (Map.Entry<Integer, Satellite> entry : SatelliteSavedData.getClientSats().entrySet()) {
+			if (entry.getValue() instanceof SatelliteWar war) {
+				float flame = war.getInterp();
+				float alpd = 1.0F - Math.min(1.0F, flame / 100);
+
+				cX += alpd * 1.5;
+				cY += alpd * 1.5;
+				cZ += alpd * 1.5;
+			}
 		}
 
 		// Lower pressure sky renders thinner
 		float pressureFactor = MathHelper.clamp(totalPressure, 0.0F, 1.0F);
-		color = color.scale(pressureFactor);
+		cX *= pressureFactor;
+		cY *= pressureFactor;
+		cZ *= pressureFactor;
 
-		return color;
+		if (eclipseAmount > 0) {
+			cX *= 1 - eclipseAmount * 0.6;
+			cY *= 1 - eclipseAmount * 0.6;
+			cZ *= 1 - eclipseAmount * 0.5;
+		}
+
+		float dust = ImpactWorldHandler.getDustForClient(world);
+		float fire = ImpactWorldHandler.getFireForClient(world);
+
+		if (dust > 0) {
+			if (fire > 0) {
+				cX *= 1.3;
+				cY *= Math.max((1 - (dust * 1.4f)), 0);
+            } else {
+				cY *= 1 - (dust * 0.5F);
+            }
+            cZ *= Math.max((1 - (dust * 4)), 0);
+
+            double commonFactor = fire + (1 - dust);
+			cX *= commonFactor;
+			cY *= commonFactor;
+			cZ *= commonFactor;
+		}
+
+		return new Vec3d(cX, cY, cZ);
 	}
 
 	private Vec3d getColorFromHex(int hexColor) {
@@ -261,11 +421,11 @@ public abstract class WorldProviderCelestial extends WorldProvider {
 
 	@Override
 	@SideOnly(Side.CLIENT)
-	public float[] calcSunriseSunsetColors(float celestialAngle, float partialTicks) {
+	public float[] calcSunriseSunsetColors(float solarAngle, float partialTicks) {
 		CBT_Atmosphere atmosphere = CelestialBody.getTrait(world, CBT_Atmosphere.class);
 		if(atmosphere == null || atmosphere.getPressure() < 0.05F) return null;
 
-		float[] colors = super.calcSunriseSunsetColors(celestialAngle, partialTicks);
+		float[] colors = super.calcSunriseSunsetColors(solarAngle, partialTicks);
 		if(colors == null) return null;
 		
 		// Mars IRL has inverted blue sunsets, which look cool as
@@ -277,7 +437,7 @@ public abstract class WorldProviderCelestial extends WorldProvider {
 			colors[2] = tmp;
 		} else if (atmosphere.hasFluid(Fluids.EVEAIR)) {
 			float f2 = 0.4F;
-			float f3 = MathHelper.cos((celestialAngle) * (float)Math.PI * 2.0F) - 0.0F;
+			float f3 = MathHelper.cos((solarAngle) * (float)Math.PI * 2.0F) - 0.0F;
 			float f4 = -0.0F;
 	
 			if (f3 >= f4 - f2 && f3 <= f4 + f2) {
@@ -289,13 +449,29 @@ public abstract class WorldProviderCelestial extends WorldProvider {
 				colors[2] = f5 * f5;
 				colors[3] = f6;
 			}
+		} else if( atmosphere.hasFluid(Fluids.TEKTOAIR) ||  atmosphere.hasFluid(Fluids.JOOLGAS) || atmosphere.hasFluid(Fluids.CHLORINE)) {
+			float tmp = colors[1];
+			colors[1] = colors[2];
+			colors[2] = tmp;
 		}
+
+		float dustFactor = 1 - ImpactWorldHandler.getDustForClient(world);
+		colors[0] *= dustFactor;
+		colors[1] *= dustFactor;
+		colors[2] *= dustFactor;
+		colors[3] *= dustFactor;
 
 		return colors;
 	}
 
 	@Override
-	public boolean canDoLightning(Chunk chunk) {
+	@SideOnly(Side.CLIENT)
+	public @NotNull Vec3d getCloudColor(float partialTicks) {
+		return super.getCloudColor(partialTicks);
+	}
+
+	@Override
+	public boolean canDoLightning(@NotNull Chunk chunk) {
 		CBT_Atmosphere atmosphere = CelestialBody.getTrait(world, CBT_Atmosphere.class);
 
 		if(atmosphere != null && atmosphere.getPressure() > 0.2)
@@ -305,7 +481,7 @@ public abstract class WorldProviderCelestial extends WorldProvider {
 	}
 
 	@Override
-	public boolean canDoRainSnowIce(Chunk chunk) {
+	public boolean canDoRainSnowIce(@NotNull Chunk chunk) {
 		CBT_Atmosphere atmosphere = CelestialBody.getTrait(world, CBT_Atmosphere.class);
 
 		if(atmosphere != null && atmosphere.getPressure() > 0.2)
@@ -330,7 +506,9 @@ public abstract class WorldProviderCelestial extends WorldProvider {
 
 		float starBrightness = super.getStarBrightness(par1);
 
-		return MathHelper.clamp(starBrightness, distanceFactor, 1F);
+		float dust = ImpactWorldHandler.getDustForClient(world);
+
+		return MathHelper.clamp(starBrightness, distanceFactor, 1F) * (1 - dust);
 	}
 
 	@Override
@@ -340,11 +518,68 @@ public abstract class WorldProviderCelestial extends WorldProvider {
 			return 0;
 
 		CBT_Atmosphere atmosphere = CelestialBody.getTrait(world, CBT_Atmosphere.class);
+
 		float sunBrightness = super.getSunBrightness(par1);
 
-		if(atmosphere == null) return sunBrightness;
+		sunBrightness *= (float) (1 - eclipseAmount * 0.6);
 
-		return sunBrightness * MathHelper.clamp(1.0F - ((float)atmosphere.getPressure() - 1.5F) * 0.2F, 0.25F, 1.0F);
+		float dust = ImpactWorldHandler.getDustForClient(world);
+		sunBrightness *= (1 - dust);
+
+
+		// brightness _inside_ of the atmosphere, from effects like lightning or war weapons
+		float insideBrightness = 0;
+
+		for(Map.Entry<Integer, Satellite> entry : SatelliteSavedData.getClientSats().entrySet()) {
+			if (entry instanceof SatelliteWar) {
+				SatelliteWar war = (SatelliteWar) entry.getValue();
+				float flame = war.getInterp();
+				float alpd = 1.0F - Math.min(1.0F, flame / 100);
+				insideBrightness += alpd;
+			}
+		}
+
+		if(CelestialBody.getBody(world).hasTrait(CBT_War.class)) {
+			CBT_War wardat = CelestialBody.getTrait(world, CBT_War.class);
+			for (int i = 0; i < wardat.getProjectiles().size(); i++) {
+				CBT_War.Projectile projectile = wardat.getProjectiles().get(i);
+				float flash = projectile.getFlashtime();
+				if(projectile.getAnimtime() > 0) {
+					insideBrightness += 100 - flash;
+				}
+			}
+		}
+
+
+		if(atmosphere == null) {
+			return sunBrightness + insideBrightness;
+		}
+
+		return sunBrightness * MathHelper.clamp(1.0F - ((float) atmosphere.getPressure() - 1.5F) * 0.2F, 0.25F, 1.0F) + insideBrightness;
+	}
+
+	public float[] getSunColor() {
+		CBT_Atmosphere atmosphere = CelestialBody.getTrait(world, CBT_Atmosphere.class);
+
+		if(atmosphere == null) return new float[] { 1.0F, 1.0F, 1.0F };
+
+		float[] sunColor = { 1.0F, 1.0F, 1.0F };
+
+		// Adjust the sun colour based on atmospheric composition
+		for(FluidEntry entry : atmosphere.fluids) {
+			// Chlorines all redden the sun by absorbing blue and green
+			if(entry.fluid == Fluids.TEKTOAIR
+					|| entry.fluid == Fluids.CHLORINE
+					|| entry.fluid == Fluids.CHLOROMETHANE
+					|| entry.fluid == Fluids.RADIOSOLVENT
+					|| entry.fluid == com.hbmspace.inventory.fluid.Fluids.CCL) {
+				float absorption = MathHelper.clamp(1.0F - (float)entry.pressure * 0.5F, 0.0F, 1.0F);
+				sunColor[1] *= absorption;
+				sunColor[2] *= absorption;
+			}
+		}
+
+		return sunColor;
 	}
 
 	@Override
@@ -462,7 +697,8 @@ public abstract class WorldProviderCelestial extends WorldProvider {
 		CelestialBody body = CelestialBody.getBody(world);
 		return body.getRotationalPeriod() / (1 - (1 / body.getPlanet().getOrbitalPeriod()));
 	}
-	
+
+	// This calculates SOLAR angle, not sidereal/celestial!
 	@Override
 	public float calculateCelestialAngle(long worldTime, float partialTicks) {
 		worldTime = getWorldTime(); // the worldtime passed in is from the fucking overworld
@@ -492,12 +728,32 @@ public abstract class WorldProviderCelestial extends WorldProvider {
 		CelestialBody body = CelestialBody.getBody(world);
 
 		// if no moons, default to half-moon difficulty
-		if(body.satellites.size() == 0) return 2;
+		if(body.satellites.isEmpty()) return 2;
 
 		// Determine difficulty phase from closest moon
-		int phase = Math.round(8 - ((float)SolarSystem.calculateSingleAngle(world, 0, body, body.satellites.get(0)) / 45 + 4));
+		int phase = Math.round(8 - ((float)SolarSystem.calculateSingleAngle(world, body, body.satellites.getFirst()) / 45 + 4));
 		if(phase >= 8) return 0;
 		return phase;
+	}
+	// TODO: implement that in BlockPedestal.. gosh fucking mixins mixins mixins mixins mixins
+	public boolean isEclipse() {
+		CelestialBody body = CelestialBody.getBody(world);
+
+		// First fetch the suns true size
+		double sunSize = SolarSystem.calculateSunSize(body);
+		float solarAngle = world.getCelestialAngle(0);
+
+		// Get our orrery of bodies, this is cached for reuse in sky rendering
+		metrics = SolarSystem.calculateMetricsFromBody(world, 0, body, solarAngle);
+
+		// Get our eclipse amount
+		return getEclipseFactor(metrics, sunSize, SolarSystem.MAX_APPARENT_SIZE_SURFACE) > 0.0;
+	}
+
+	@Override
+	public double getHorizon() {
+		if(getDimension() == 0) return super.getHorizon();
+		return 63;
 	}
 
 	// This is the vanilla junk table, for replacing fish on dead worlds
